# generative_and_agentic_ai

./: README.md  main.py  pyproject.toml  requirements.txt
Module_1_Foundations_of_Modern_GenAI/: bag_of_words.ipynb  classical_word_embedding.ipynb  custom_word2vec_embedding.ipynb  one_hot_encoding.ipynb  sota_llm_embedding.ipynb  tf_idf_vectorizer.ipynb
Module_1_Foundations_of_Modern_GenAI/data/: story1.txt  story2.txt
Module_3_Accessing_LLMs/: accessing_claude_llms.ipynb  accessing_gemini_llms.ipynb  accessing_groq_llms.ipynb  accessing_huggingace_llms.ipynb  accessing_ollama_llms.ipynb  accessing_openrouter_llms.ipynb  app.py
Module_4_Finetuning/: Exploring_Huggingface.ipynb
